Usuário ligado ao index | Stable Version Pré BD

--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -12,8 +12,12 @@
 </head>
 
 <body class="p-4">
-    <header class="text-center mb-6">
-        <h1 class="text-2xl font-bold">D&D 5e Ficha de Personagem</h1>
+    <header>
+        <div class="logo-container text-left">
+            <a href="../index.html" class="back-button rounded">&#8592;</a>
+            <img src="/img/logo.png" alt="Dragon's Grimoire Logo">
+            <h1>D&D 5e Ficha de Personagem</h1>
+        </div>
     </header>
     <main class="grid-container">
         <section class="p-4 rounded shadow-md mb-6 text-box" id="character-sheet">
@@ -68,7 +72,7 @@
                     </select>
                 </div>
                 <div class="mb-4 text-center">
-                    <button class="px-4 py-2 rounded btn-primary" type="submit">Buscar Item</button>
+                    <button class="px-4 py-2 rounded" type="submit">Buscar Item</button>
                 </div>
             </form>
         </section>
@@ -94,7 +98,7 @@
                     </select>
                 </div>
                 <div class="mb-2 text-center">
-                    <button class="btn-primary px-4 py-2 rounded" type="submit">Buscar Magia</button>
+                    <button class="px-4 py-2 rounded" type="submit">Buscar Magia</button>
                 </div>
             </form>
         </section>
