--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <section class="user-options">
             <div class="user-option">
                 <img  class="img_jogador" src="img/jogadores.jpg" alt="Jogador">
-                <button class="player-button">Jogador</button>
-                <p class="p_jogador">Crie seu personagem,liste seus itens e suas magias.</p>
+                <a href="./Jogador/jogador.html"><button class="player-button">Jogador</button></a>
+                <!-- <p class="p_jogador">Crie seu personagem,liste seus itens e suas magias.</p> -->
             </div>
 
             <div class="user-option">
                 <img   class="img_mestre" src="img/mestre.jpg" alt="Mestre">
                 <a href="./Mestre/html/cadastro_itens.html"><button class="dm-button">Mestre</button></a>
-                <p>Crie e gerencie itens, magias e anotações para suas campanhas.</p>
+                <!-- <p>Crie e gerencie itens, magias e anotações para suas campanhas.</p> -->
             </div>
         </section>
 
