--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D&D Ficha de Personagem</title>
+    <title>Dragon's Grimoire Jogador</title>
     <!--Bootstrap 5-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="jogador.css">
 </head>
 
-<body class="p-4">
+<body class="p-3">
     <header>
         <div class="logo-container text-left">
             <a href="../index.html" class="back-button rounded">&#8592;</a>
@@ -29,8 +29,6 @@
                     Informações</button>
             </div>
             <div id="character-details"></div>
-            <ul id="items-list" class="mt-4"></ul>
-            <ul id="spells-list" class="mt-4"></ul>
         </section>
         <section class="p-4 rounded shadow-md mb-6 text-box" id="notes-section">
             <h2 class="text-xl font-semibold mb-4">Notas Mentais
@@ -49,39 +47,23 @@
                 <!-- As anotações saem aqui -->
             </ul>
         </section>
-        <section class="p-4 rounded shadow-md mb-6 text-box justify-content-center" id="items-section">
+        <section class="p-4 rounded shadow-md mb-6 text-box" id="items-section">
             <h2 class="text-xl font-semibold mb-4">Itens
                 <button class="btn-min-max" onclick="toggleSection('items-section')">-</button>
             </h2>
             <form id="items-form">
-                <div class="mb-4">
-                    <label class="block mb-1" for="item">Nome</label>
-                    <input class="w-full p-2 border rounded " type="text" id="item" required>
-                </div>
-                <div class="mb-4">
-                    <label class="block mb-1" for="quantity">Quantidade</label>
-                    <input class="w-full p-2 border rounded" type="number" id="quantity" required>
-                </div>
-                <div class="mb-4">
-                    <label class="block mb-1" for="category">Categoria</label>
-                    <select class="w-full p-2 border rounded" id="category" required>
-                        <option value="arma">Arma</option>
-                        <option value="armadura">Armadura</option>
-                        <option value="equipamento">Equipamento</option>
-                        <option value="outros">Outros</option>
-                    </select>
-                </div>
                 <div class="mb-4 text-center">
-                    <button class="px-4 py-2 rounded" type="submit">Buscar Item</button>
+                    <button class="px-4 py-2 rounded" onclick="openModal('item-modal')">Buscar Item</button>
                 </div>
             </form>
+            <ul id="items-list" class="mt-4"></ul>
         </section>
         <section class="p-4 rounded shadow-md mb-6 text-box" id="spells-section">
             <h2 class="text-xl font-semibold mb-4">Magias
                 <button class="btn-min-max" onclick="toggleSection('spells-section')">-</button>
             </h2>
             <form id="spells-form">
-                <div class="mb-4">
+                <!-- <div class="mb-4">
                     <label class="block mb-1" for="spell">Nome</label>
                     <input class="w-full p-2 border rounded" type="text" id="spell" required>
                 </div>
@@ -99,8 +81,9 @@
                 </div>
                 <div class="mb-2 text-center">
                     <button class="px-4 py-2 rounded" type="submit">Buscar Magia</button>
-                </div>
+                </div> -->
             </form>
+            <ul id="spells-list" class="mt-4"></ul>
         </section>
         <section class="p-4 rounded shadow-md mb-6" id="exp-imp-section">
             <h2 class="text-xl font-semibold mb-4">Exportar/Importar Informações do Personagem
@@ -200,7 +183,7 @@
                 </div>
                 <div class="px-4 py-3 text-right">
                     <button id="save-character" class="px-4 py-2 rounded">Salvar</button>
-                    <button id="cancel-character" class="px-4 py-2 rounded">Cancelar</button>
+                    <button id="cancel-character" class="btn-danger px-4 py-2 rounded">Cancelar</button>
                 </div>
             </form>
         </div>
@@ -209,27 +192,17 @@
     <!-- Modal para Edição de Item -->
     <div id="item-modal" class="fixed hidden modal" aria-labelledby="item-modal" role="dialog" aria-modal="true">
         <div class="modal-content">
-            <h3 class="text-lg leading-6 font-medium" id="item-modal">Editar Item</h3>
-            <div class="mt-2">
-                <label class="block mb-1" for="edit-item">Item</label>
-                <input class="w-full p-2 border rounded" type="text" id="edit-item" required>
+            <div class="container">
+                <h1>Item</h1>
+                <button id="cancel-item" onclick="closeModal('item-modal')" class="btn-danger px-3 py-1 rounded ">Sair</button>
             </div>
-            <div class="mt-2">
-                <label class="block mb-1" for="edit-quantity">Quantidade</label>
-                <input class="w-full p-2 border rounded" type="number" id="edit-quantity" required>
+            <div id="item-list-container" class="form-container2">
+                <h2>Lista de Itens</h2>
+                <input type="text" id="search" placeholder="Pesquisar itens...">
+                <div id="item-cards-container"></div>
             </div>
-            <div class="mt-2">
-                <label class="block mb-1" for="edit-category">Categoria</label>
-                <select class="w-full p-2 border rounded" id="edit-category" required>
-                    <option value="arma">Arma</option>
-                    <option value="armadura">Armadura</option>
-                    <option value="equipamento">Equipamento</option>
-                    <option value="outros">Outros</option>
-                </select>
-            </div>
-            <div class="px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                <button id="save-item" class="">Salvar</button>
-                <button id="cancel-item" class="">Cancelar</button>
+            <div class="px-4 py-3 text-right">
+                <button id="cancel-item" onclick="closeModal('item-modal')" class="btn-danger px-3 py-1 rounded">Sair</button>
             </div>
         </div>
     </div>
@@ -254,11 +227,9 @@
                     <option value="utilidade">Utilidade</option>
                 </select>
             </div>
-            <div class="px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                <button id="save-spell"
-                    class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 text-base font-medium text-white sm:ml-3 sm:w-auto sm:text-sm">Salvar</button>
-                <button id="cancel-spell"
-                    class="mt-3 w-full inline-flex justify-center rounded-md border shadow-sm px-4 py-2 text-base font-medium sm:mt-0 sm:w-auto sm:text-sm">Cancelar</button>
+            <div class="px-4 py-3 text-right">
+                <button id="save-spell" class="px-2 py-1 rounded">Salvar</button>
+                <button id="cancel-spell" class="px-2 py-1 rounded btn-danger">Cancelar</button>
             </div>
         </div>
     </div>
@@ -287,16 +258,17 @@
                     <!-- Subtópicos saem aqui -->
                 </tbody>
             </table>
-            <div class="px-4 py-3 text-center">
-                <button id="close-note"
-                    class="w-full inline-flex justify-center rounded-md shadow-sm px-4 py-2 text-base font-medium text-white">Sair</button>
+            <div class="px-4 py-3 text-right">
+                <button id="close-note" class="px-4 py-2 rounded">Sair</button>
             </div>
         </div>
     </div>
-    <script src="jogador.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="js/jogador.js"></script>
+    <script type="module" src="../bd.js"></script>
+    <script type="module" src="/Jogador/js/jogadorItem.js"></script>
+    
+    <!-- Link do script do Bootstrap5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
