Correção na função de itens

--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -82,7 +82,7 @@
                 <div class="mb-2 text-center">
                     <button class="px-4 py-2 rounded" type="submit">Buscar Magia</button>
                 </div> -->
-            </form>
+            </form>         
             <ul id="spells-list" class="mt-4"></ul>
         </section>
         <section class="p-4 rounded shadow-md mb-6" id="exp-imp-section">
@@ -192,12 +192,12 @@
     <!-- Modal para Edição de Item -->
     <div id="item-modal" class="fixed hidden modal" aria-labelledby="item-modal" role="dialog" aria-modal="true">
         <div class="modal-content">
-            <div class="container">
-                <h1>Item</h1>
+            <div class="container mb-3">
+                <h1>Busca de Itens</h1>
                 <button id="cancel-item" onclick="closeModal('item-modal')" class="btn-danger px-3 py-1 rounded ">Sair</button>
             </div>
             <div id="item-list-container" class="form-container2">
-                <h2>Lista de Itens</h2>
+                <h2>Listagem</h2>
                 <input type="text" id="search" placeholder="Pesquisar itens...">
                 <div id="item-cards-container"></div>
             </div>
