Import/export JSON

--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -73,18 +73,18 @@
             </div>
             <ul id="spells-list" class="mt-4"></ul>
         </section>
-        
+
 
         <!-- SECTION DE IMPORT -->
         <!-- MANUTENÇÃO -->
         <section class="p-4 rounded shadow-md mb-6" id="exp-imp-section">
-            <!-- <h2 class="text-xl font-semibold mb-4">Exportar/Importar Informações do Personagem
+            <h2 class="text-xl font-semibold mb-4">Exportar/Importar Informações do Personagem
                 <button class="btn-min-max" onclick="toggleSection('exp-imp-section')">-</button>
             </h2>
             <div>
                 <button class="px-4 py-2 rounded" onclick="exportCharacter()">Exportar Dados do Personagem</button>
                 <input type="file" id="import-file" class="mt-4" onchange="importCharacter(event)">
-            </div> -->
+            </div>
         </section>
     </main>
 
@@ -161,11 +161,13 @@
                 </div>
                 <div class="mb-4">
                     <label class="block mb-1" for="abilities-modal">Habilidades</label>
-                    <textarea class="w-full p-2 border rounded text-box" id="abilities-modal" rows="3" required></textarea>
+                    <textarea class="w-full p-2 border rounded text-box" id="abilities-modal" rows="3"
+                        required></textarea>
                 </div>
                 <div class="mb-4">
                     <label class="block mb-1" for="background-modal">Background</label>
-                    <textarea class="w-full p-2 border rounded text-box" id="background-modal" rows="3" required></textarea>
+                    <textarea class="w-full p-2 border rounded text-box" id="background-modal" rows="3"
+                        required></textarea>
                 </div>
                 <div class="mb-4">
                     <label class="block mb-1" for="traits-modal">Características</label>
