Função de buscar itens e magias

--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -60,7 +60,7 @@
             <div class="mb-4 text-center">
                 <button class="px-4 py-2 rounded" type="button" onclick="openModal('item-modal')">Buscar Item</button>
             </div>
-            <ul id="items-list" class="mt-4"></ul>
+            <div id="items-list" class="mt-4"></div>
         </section>
 
         <!-- SECTION DAS MAGIAS -->
@@ -71,7 +71,7 @@
             <div class="mb-4 text-center">
                 <button class="px-4 py-2 rounded" type="button" onclick="openModal('spell-modal')">Buscar Magia</button>
             </div>
-            <ul id="spells-list" class="mt-4"></ul>
+            <div id="spells-list" class="mt-4"></div>
         </section>
 
 
