--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -257,10 +257,11 @@
         </div>
     </div>
 
-    <script type="module" src="js/jogador.js"></script>
+    <script src="js/jogador.js"></script>
     <script type="module" src="../bd.js"></script>
     <script type="module" src="/Jogador/js/jogadorItem.js"></script>
     <script type="module" src="/Jogador/js/jogadorMagia.js"></script>
+    <!-- <script type="module" src="/Mestre/js/magias.js"></script> -->
 
     <!-- Link do script do Bootstrap5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
