--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -27,7 +27,7 @@
                 <button class="btn-min-max" onclick="toggleSection('character-sheet')">-</button>
             </h2>
             <div class="text-center">
-                <button class="px-4 py-2 rounded mb-4" onclick="openModal('character-modal')">Adicionar/Editar
+                <button class="px-4 py-2 rounded mb-4" onclick="openModal('character-modal')">Editar
                     Informações</button>
             </div>
             <div id="character-details"></div>
@@ -61,7 +61,7 @@
             <div class="mb-4 text-center">
                 <button class="px-4 py-2 rounded" type="button" onclick="openModal('item-modal')">Buscar Item</button>
             </div>
-            <div id="items-list" class="mt-4"></div>
+            <div id="items-list"></div>
         </section>
 
         <!-- SECTION DAS MAGIAS -->
@@ -116,7 +116,7 @@
                     <input class="w-full p-2 border rounded" type="number" id="armor-class-modal" required>
                 </div>
                 <div class="">
-                    <label class="block mb-1" for="initiative-modal">Iniciativa Extra</label>
+                    <label class="block mb-1" for="initiative-modal">Iniciativa Extra (Não conta Destreza)</label>
                     <select class="w-full p-2 border rounded" id="initiative-modal" required>
                         <option value="0">0</option>
                         <option value="1">1</option>
@@ -173,9 +173,9 @@
                     <label class="block mb-1" for="traits-modal">Características</label>
                     <textarea class="w-full p-2 border rounded text-box" id="traits-modal" rows="4" required></textarea>
                 </div>
-                <div class="px-4 py-3 text-right">
-                    <button id="save-character" class="px-4 py-2 rounded">Salvar</button>
-                    <button id="cancel-character" class="btn-danger px-4 py-2 rounded">Cancelar</button>
+                <div class="text-right">
+                    <button id="save-character" class="px-4 py-1 rounded">Salvar</button>
+                    <button id="cancel-character" class="btn-danger px-4 py-1 rounded">Cancelar</button>
                 </div>
             </form>
         </div>
@@ -226,7 +226,7 @@
             <div class="container mb-3">
                 <h1>Busca de Magias</h1>
                 <button id="cancel-spell" onclick="closeModal('spell-modal')"
-                    class="btn-danger px-3 py-1 rounded">Sair</button>
+                    class="btn-danger px-3 py-1 rounded">&times;</button>
             </div>
             <div id="spell-list-container" class="form-container2">
                 <h2>Listagem</h2>
@@ -241,18 +241,18 @@
     </div>
 
     <!-- MODAL PARA DESCRIÇÃO COMPLETA DA MAGIA -->
-    <div id="all-spell-modal" class="fixed hidden modal" aria-labelledby="descricao-modal" role="dialog"
+    <div id="all-spell-modal" class="modal" aria-labelledby="descricao-modal" role="dialog"
         aria-modal="true">
         <div class="modal-content">
             <div id="spell-list-info"></div>
-            <!-- <button id="close-spell-modal" class="btn-danger px-3 py-1 rounded" onclick="closeModal('all-spell-modal')">Fechar</button> -->
+            <!-- <button id="close-spell-modal" class="btn-danger px-1 py-1 rounded" onclick="closeModal('all-spell-modal')">Fechar</button> -->
         </div>
     </div>
 
     <!-- Modal para Notas Mentais -->
     <div id="note-modal" class="fixed hidden modal" aria-labelledby="note-modal" role="dialog" aria-modal="true">
         <div class="modal-content">
-            <h3 class="text-lg leading-6 font-medium" id="note-modal">Editar Nota</h3>
+            <h3 class="text-lg leading-6 font-medium">Editar Nota</h3>
             <div class="mt-2">
                 <label class="block mb-1" for="edit-note-title">Título da Anotação</label>
                 <input class="w-full p-2 border rounded" type="text" id="edit-note-title" readonly>
@@ -261,7 +261,7 @@
                 <label class="block mb-1" for="subtopic">Subtópico</label>
                 <textarea class="w-full p-2 border rounded" id="subtopic" rows="3"></textarea>
             </div>
-            <button class="px-4 py-2 rounded mt-2" onclick="addSubtopic()">Adicionar Subtópico</button>
+            <button class="px-4 py-2 rounded mt-2" id="add-subtopic-btn">Adicionar Subtópico</button>
             <table class="mt-4 w-full">
                 <thead>
                     <tr>
@@ -274,7 +274,7 @@
                 </tbody>
             </table>
             <div class="px-4 py-3 text-right">
-                <button id="close-note" class="px-4 py-2 rounded">Sair</button>
+                <button id="close-note" class="btn-danger px-4 py-2 rounded">Sair</button>
             </div>
         </div>
     </div>
@@ -282,6 +282,7 @@
     <script src="js/jogador.js"></script>
     <script type="module" src="/Jogador/js/jogadorItem.js"></script>
     <script type="module" src="/Jogador/js/jogadorMagia.js"></script>
+    <script type="module" src="/Jogador/js/jogadorNotas.js"></script>
     <!-- <script type="module" src="/Mestre/js/magias.js"></script> -->
 
     <!-- Link do script do Bootstrap5 -->
