--- a/Jogador/jogador.html
+++ b/Jogador/jogador.html
@@ -77,7 +77,7 @@
 
         <!-- SECTION DE IMPORT -->
         <!-- MANUTENÇÃO -->
-        <section class="p-4 rounded shadow-md mb-6" id="exp-imp-section">
+        <!-- <section class="p-4 rounded shadow-md mb-6" id="exp-imp-section">
             <h2 class="text-xl font-semibold mb-4">Exportar/Importar Informações do Personagem
                 <button class="btn-min-max" onclick="toggleSection('exp-imp-section')">-</button>
             </h2>
@@ -85,7 +85,7 @@
                 <button class="px-4 py-2 rounded" onclick="exportCharacter()">Exportar Dados do Personagem</button>
                 <input type="file" id="import-file" class="mt-4" onchange="importCharacter(event)">
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!-- Modal para Edição de Informações do Personagem -->
