Versão estável, com login e outras mudanças de QOL

--- a/public/Mestre/html/cadastro_itens.html
+++ b/public/Mestre/html/cadastro_itens.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dragon's Grimoire - Forjando Seu Mundo, Item por Item</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon-32x32.png">
-    <link rel="stylesheet" href="/Mestre/css/cadastro_itens.css">
+    <link rel="stylesheet" href="../css/cadastro_itens.css">
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 </head>
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="/img/logo.png" alt="Dragon's Grimoire Logo">
+            <img src="../../img/logo.png" alt="Dragon's Grimoire Logo">
         </div>
         <ul>
             <li><a href="/index.html">Home</a></li>
