--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/10.13.1/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/10.13.1/firebase-auth-compat.js"></script>
+    <!-- <script defer src="/__/firebase/10.13.1/firebase-auth-compat.js"></script>
     <script defer src="/__/firebase/10.13.1/firebase-database-compat.js"></script>
     <script defer src="/__/firebase/10.13.1/firebase-firestore-compat.js"></script>
     <script defer src="/__/firebase/10.13.1/firebase-functions-compat.js"></script>
@@ -16,7 +16,7 @@
     <script defer src="/__/firebase/10.13.1/firebase-storage-compat.js"></script>
     <script defer src="/__/firebase/10.13.1/firebase-analytics-compat.js"></script>
     <script defer src="/__/firebase/10.13.1/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/10.13.1/firebase-performance-compat.js"></script>
+    <script defer src="/__/firebase/10.13.1/firebase-performance-compat.js"></script> -->
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -24,7 +24,7 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <header>
@@ -53,7 +53,7 @@
         <section class="user-options">
             <div class="user-option">
                 <img  class="img_jogador" src="img/jogadores.jpg" alt="Jogador">
-                <a href="./Jogador/jogador.html"><button class="player-button">Jogador</button></a>
+                <a href="./Jogador/login.html"><button class="player-button">Jogador</button></a>
                 <!-- <p class="p_jogador">Crie seu personagem,liste seus itens e suas magias.</p> -->
             </div>
 
